# Ari-IME

./: .SRCINFO  .gitignore  CHANGELOG.md  CMakeLists.txt  OPTIMIZATION_PLAN.md  PKGBUILD  README.md
.github/workflows/: check.yml  nightly-fuzz.yml
data/: inputer-addon.conf  inputer-addon.conf.in  inputer-im.conf
docs/: manual-qa.md  release-1.0.0.md  release-1.1.0.md
scripts/: check.sh  reset-user-data.sh
src/: buffer.cpp  buffer.h  constants.h  inputer.cpp  inputer.h  layout.cpp  layout.h  user_data.cpp  user_data.h  zhuyin.cpp  zhuyin.h
test/: fuzz_buffer.cpp  test_buffer.cpp  test_common.h  test_layout.cpp  test_user_data.cpp
test/corpus/fuzz_buffer/: basic-mixed  candidates  paste-and-layout  punctuation  technical-literals
